--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "vue-resource": "^1.0.3"
   },
   "dependencies": {
+    "chart.js": "^2.4.0",
     "grid-list": "^0.3.3",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "leaflet": "^1.0.2",
+    "leaflet.markercluster": "^1.0.0"
   }
 }
